--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Senac Ecologico</title>
-    <link rel="stylesheet" href="../css/barra-navegacao.css" />
-    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="/src/css/barra-navegacao.css" />
+    <link rel="shortcut icon" href="/src/img/favicon.ico" type="image/x-icon">
   </head>
 
   <body>
@@ -39,6 +39,6 @@
             
         </section>
     </main>
-    <script src="../index.js"></script>
+    <script src="/src/index.js"></script>
   </body>
 </html>
