--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
             
         </section>
     </main>
-    <script src="/src/index.js"></script>
+    <script src="./src/index.js"></script>
   </body>
 </html>
