--- a/index.html
+++ b/index.html
@@ -77,6 +77,6 @@
           </svg>
            </div>
         </section>
-    <script src="/src/index.js"></script>
+    <script src="./src/index.js"></script>
   </body>
 </html>
