novas section incopletas

--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
           <div class="titulo-sec2">Somos referência em gestão de resíduos Classe II, comercialização e reciclagem. Nosso trabalho é ajudar empresas a melhorarem sua relação com o planeta</div>
           </div>
         </div>
-          <div class="lado2">
-          </div>
+        <div class="conteiner">
+          <img src="./src/img/foto-da-sala.webp" alt="foto-da-sala">
+         </div>
           </div>
         </section>
         <section>
@@ -77,6 +78,38 @@
           </svg>
            </div>
         </section>
+        <section>
+          <div class="grid-container">
+            <div class="grid-item">
+                <img src="./src/img/img-vidro.jpg" alt="Imagem 1">
+            </div>
+            <div class="grid-item">
+                <img src="./src/img/grid2.webp" alt="Imagem 2">
+            </div>
+            <div class="grid-item">
+                <img src="./src/img/grid3.webp" alt="Imagem 3">
+            </div>
+            <div class="grid-item">
+                <img src="./src/img/grid4.webp" alt="Imagem 4">
+            </div>
+          </div>
+        </section>
+
+        <div class="grid-color">
+          <div class="grid-c">
+              <img src="./src/img/grid1-1.webp" alt="Imagem 2">
+          </div>
+          <div class="grid-c">
+              <img src="./src/img/grid1-2.webp" alt="Imagem 3">
+          </div>
+          <div class="grid-c">
+              <img src="./src/img/grid1-3.webp" alt="Imagem 4">
+          </div>
+          <div class="grid-c">
+              <img src="./src/img/grid1-4.webp" alt="Imagem 4">
+          </div>
+        </div>
+      </section>
     <script src="./src/index.js"></script>
   </body>
 </html>
