--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <ul class="nav-list">
           <li><a href="#">Início</a></li>
-          <li><a href="#">Sobre</a></li>
+          <li><a href="./sobre.html">Sobre</a></li>
           <li><a href="#">Projetos</a></li>
           <li><a href="./galeria.html">Galeria de fotos</li>
         </ul>
@@ -173,7 +173,7 @@
                   <ul>
                   
                     <li><a href="#" title="Página Inícial">Página Inícial</a></li>
-                    <li><a href="#" title="Sobre a Empresa">Sobre</a></li>
+                    <li><a href="./sobre.html" title="Sobre a Empresa">Sobre</a></li>
                     <li><a href="#" title="Galeria de Fotos">Projetos</a></li>
                     <li><a href="./galeria.html" title="Fale Conosco">Galeria de fotos</a></li>
                   
