--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <ul class="nav-list">
           <li><a href="#">Início</a></li>
           <li><a href="./sobre.html">Sobre</a></li>
-          <li><a href="##">Projetos</a></li>
+          <li><a href="#">Projetos</a></li>
           <li><a href="./galeria.html">Galeria de fotos</li>
         </ul>
       </nav>
