--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <li><a href="#">Início</a></li>
           <li><a href="./sobre.html">Sobre</a></li>
           <li><a href="#">Projetos</a></li>
-          <li><a href="./galeria.html">Galeria de fotos</li>
+          <li><a href="./galeria.html">Galeria de fotos</a></li>
         </ul>
       </nav>
     </header>
@@ -56,7 +56,7 @@
           <div class="alinhamento-tt">
           <div class="titulo">quem somos</div>
           
-          <div class="titulo-sec2">Somos referência em gestão de resíduos Classe II, comercialização e reciclagem. Nosso trabalho é ajudar empresas a melhorarem sua relação com o planeta</div>
+          <div class="titulo-sec2">Turma Cinza 2023.33.82 <br> Estamos desenvolvendo um projeto para o Lab Juv do Senac, focado no combate ao descarte irregular de lixo e na conscientização sobre práticas de descarte adequado.</div>
           </div>
         </div>
         <div class="conteiner">
