--- a/sobre.html
+++ b/sobre.html
@@ -9,10 +9,10 @@
 <body>
     <a href="./index.html" class="seta" ><img src="./src/img-galeria/back-arrow_icon-icons.com_72866.png" alt=""></a>
 <p>
-Projeto Lab Juv - Turma Ciza 2023.33.82
+Projeto Lab Juv - Turma Cinza 2023.33.82
 </p>
 <p>
-Nossa turma, Ciza 2023.33.82, do Senac, está empenhada em desenvolver um projeto que visa
+Nossa turma, Cinza 2023.33.82, do Senac, está empenhada em desenvolver um projeto que visa
 abordar uma questão crítica e urgente em nossa sociedade: o descarte irregular de lixo. 
 Entendemos que o descarte inadequado do lixo é um problema que afeta diretamente nosso meio 
 ambiente e a qualidade de vida de todos.
