add: movies and music

--- a/galeria.html
+++ b/galeria.html
@@ -8,6 +8,11 @@
     <title>Cars Gallery</title>
 </head>
 <body>
+
+    <audio autoplay>
+        <source src="./src/audio/X2Download.app - Bruno Mars - That’s What I Like [Official Music Video] (128 kbps).mp3" type="audio/mpeg">
+        Seu navegador não suporta a reprodução de áudio.
+    </audio>
     <a href="./index.html" class="seta" ><img src="./src/img-galeria/back-arrow_icon-icons.com_72866.png" alt=""></a>
     <header>
  
@@ -39,6 +44,30 @@
             <a href="./src/img-galeria/IMG_7156.PNG" class="gallery-items">
                 <img src="./src/img-galeria/IMG_7156.PNG" alt="Luigi">
             </a> 
+            <a href="./src/img/IMG_7127.MOV" class="gallery-items video">
+                <video controls>
+                    <source src="./src/img/IMG_7127.MOV" type="video/mp4">
+                    Seu navegador não suporta a tag de vídeo.
+                </video>
+            </a>
+            <a href="./src/img/IMG_7127.MOV" class="gallery-items video">
+                <video controls>
+                    <source src="./src/img/IMG_7127.MOV" type="video/mp4">
+                    Seu navegador não suporta a tag de vídeo.
+                </video>
+            </a>
+            <a href="./src/img/IMG_7127.MOV" class="gallery-items video">
+                <video controls>
+                    <source src="./src/img/IMG_7127.MOV" type="video/mp4">
+                    Seu navegador não suporta a tag de vídeo.
+                </video>
+            </a>
+            <a href="./src/img/IMG_7127.MOV" class="gallery-items video">
+                <video controls>
+                    <source src="./src/img/IMG_7127.MOV" type="video/mp4">
+                    Seu navegador não suporta a tag de vídeo.
+                </video>
+            </a>
         </div>        
     </main>
     <footer>
