--- a/sobre.html
+++ b/sobre.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="./index.html" class="seta" ><img src="./src/img-galeria/back-arrow_icon-icons.com_72866.png" alt=""></a>
+    <a href="https://senac.onrender.com/" class="seta" ><img src="./src/img-galeria/back-arrow_icon-icons.com_72866.png" alt=""></a>
 <p>
 Projeto Lab Juv - Turma Cinza 2023.33.82
 </p>
