add: movie and songs

--- a/galeria.html
+++ b/galeria.html
@@ -19,7 +19,7 @@
         <h1>Galeria De Fotos</h1>
     </header>
     <main>
-        <div class="gallery-container">
+        <div class="gallery-container".
             <a href="./src/img-galeria/2087a09b-7104-4bd1-afa0-ba963a52366a.JPG" class="gallery-items">
                 <img src="./src/img-galeria/2087a09b-7104-4bd1-afa0-ba963a52366a.JPG" alt="Chick Hicks">
             </a>
