--- a/galeria.html
+++ b/galeria.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./src/css/galeria.css">
+    <link rel="shortcut icon" href="./src/img/favicon.ico" type="image/x-icon">
     <title>Cars Gallery</title>
 </head>
 <body>
@@ -19,7 +20,7 @@
         <h1>Galeria De Fotos</h1>
     </header>
     <main>
-        <div class="gallery-container".
+        <div class="gallery-container">
             <a href="./src/img-galeria/2087a09b-7104-4bd1-afa0-ba963a52366a.JPG" class="gallery-items">
                 <img src="./src/img-galeria/2087a09b-7104-4bd1-afa0-ba963a52366a.JPG" alt="Chick Hicks">
             </a>
