add: movie and songs

--- a/sobre.html
+++ b/sobre.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./src/css/sobre.css">
     <link rel="shortcut icon" href="./src/img/favicon.ico" type="image/x-icon">
-    <title>Document</title>
+    <title>Quem somos?</title>
 </head>
 <body>
-    <a href="https://senac.onrender.com/" class="seta" ><img src="./src/img-galeria/back-arrow_icon-icons.com_72866.png" alt=""></a>
+    <a href="./" class="seta" ><img src="./src/img-galeria/back-arrow_icon-icons.com_72866.png" alt=""></a>
 <p>
 Projeto Lab Juv - Turma Cinza 2023.33.82
 </p>
