--- a/galeria.html
+++ b/galeria.html
@@ -14,7 +14,7 @@
         <source src="./src/audio/X2Download.app - Bruno Mars - That’s What I Like [Official Music Video] (128 kbps).mp3" type="audio/mpeg">
         Seu navegador não suporta a reprodução de áudio.
     </audio>
-    <a href="./index.html" class="seta" ><img src="./src/img-galeria/back-arrow_icon-icons.com_72866.png" alt=""></a>
+    <a href="./" class="seta" ><img src="./src/img-galeria/back-arrow_icon-icons.com_72866.png" alt="seta"></a>
     <header>
  
         <h1>Galeria De Fotos</h1>
