--- a/galeria.html
+++ b/galeria.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="./src/css/galeria.css">
     <link rel="shortcut icon" href="./src/img/favicon.ico" type="image/x-icon">
     <title>Cars Gallery</title>
+
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-SLC6PNXBXT">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-SLC6PNXBXT');
+</script>
 </head>
 <body>
 
