--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
     <link rel="stylesheet" href="./src/css/grid.css">
     <link rel="stylesheet" href="./img.css">
     <link rel="shortcut icon" href="./src/img/favicon.ico" type="image/x-icon">
+
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-SLC6PNXBXT">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-SLC6PNXBXT');
+</script>
   </head>
 
   <body>
