--- a/sobre.html
+++ b/sobre.html
@@ -6,6 +6,17 @@
     <link rel="stylesheet" href="./src/css/sobre.css">
     <link rel="shortcut icon" href="./src/img/favicon.ico" type="image/x-icon">
     <title>Quem somos?</title>
+
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-SLC6PNXBXT">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-SLC6PNXBXT');
+</script>
 </head>
 <body>
     <a href="./" class="seta" ><img src="./src/img-galeria/back-arrow_icon-icons.com_72866.png" alt=""></a>
