add new sections

--- a/src/html/sobre.html
+++ b/src/html/sobre.html
@@ -3,12 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./src/css/sobre.css" />
-    <link
-      rel="shortcut icon"
-      href="./src/img/favicon.ico"
-      type="image/x-icon"
-    />
+    <link rel="stylesheet" href="../css/sobre.css" />
+    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon" />
     <title>Quem somos?</title>
 
     <!-- Google tag (gtag.js) -->
@@ -27,8 +23,8 @@
     </script>
   </head>
   <body>
-    <a href="https://senacecologico.onrender.com/" class="seta"
-      ><img src="./src/img-galeria/back-arrow_icon-icons.com_72866.png" alt=""
+    <a href="./index.html" class="seta"
+      ><img src="../img-galeria/back-arrow_icon-icons.com_72866.png" alt=""
     /></a>
     <p>Projeto Lab Juv - Turma Cinza 2023.33.82</p>
     <p>
