--- a/src/html/galeria.html
+++ b/src/html/galeria.html
@@ -4,12 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./src/css/galeria.css" />
-    <link
-      rel="shortcut icon"
-      href="./src/img/favicon.ico"
-      type="image/x-icon"
-    />
+    <link rel="stylesheet" href="../css/galeria.css" />
+    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon" />
     <title>Cars Gallery</title>
 
     <!-- Google tag (gtag.js) -->
@@ -30,15 +26,13 @@
   <body>
     <audio autoplay>
       <source
-        src="./src/audio/X2Download.app - Bruno Mars - That’s What I Like [Official Music Video] (128 kbps).mp3"
+        src="../audio/X2Download.app - Bruno Mars - That’s What I Like [Official Music Video] (128 kbps).mp3"
         type="audio/mpeg"
       />
       Seu navegador não suporta a reprodução de áudio.
     </audio>
-    <a href="https://senacecologico.onrender.com/" class="seta"
-      ><img
-        src="./src/img-galeria/back-arrow_icon-icons.com_72866.png"
-        alt="seta"
+    <a href="./index.html" class="seta"
+      ><img src="../img-galeria/back-arrow_icon-icons.com_72866.png" alt="seta"
     /></a>
     <header>
       <h1>Galeria De Fotos</h1>
@@ -46,92 +40,92 @@
     <main>
       <div class="gallery-container">
         <a
-          href="./src/img-galeria/2087a09b-7104-4bd1-afa0-ba963a52366a.JPG"
+          href="../img-galeria/2087a09b-7104-4bd1-afa0-ba963a52366a.JPG"
           class="gallery-items"
         >
           <img
-            src="./src/img-galeria/2087a09b-7104-4bd1-afa0-ba963a52366a.JPG"
+            src="../img-galeria/2087a09b-7104-4bd1-afa0-ba963a52366a.JPG"
             alt="Chick Hicks"
           />
         </a>
         <a
-          href="./src/img-galeria/59ecdad3-f7af-4ba8-826a-f6d70c062797.JPG"
+          href="../img-galeria/59ecdad3-f7af-4ba8-826a-f6d70c062797.JPG"
           class="gallery-items"
         >
           <img
-            src="./src/img-galeria/59ecdad3-f7af-4ba8-826a-f6d70c062797.JPG"
+            src="../img-galeria/59ecdad3-f7af-4ba8-826a-f6d70c062797.JPG"
             alt="Doctor Hudson"
           />
         </a>
         <a
-          href="./src/img-galeria/67fe424d-1e25-47bb-b95f-fa8664cf003b.JPG"
+          href="../img-galeria/67fe424d-1e25-47bb-b95f-fa8664cf003b.JPG"
           class="gallery-items"
         >
           <img
-            src="./src/img-galeria/67fe424d-1e25-47bb-b95f-fa8664cf003b.JPG"
+            src="../img-galeria/67fe424d-1e25-47bb-b95f-fa8664cf003b.JPG"
             alt="Fillmore"
           />
         </a>
         <a
-          href="./src/img-galeria/9bf4faf6-bb4a-4d3d-aea5-0afea38edd9a.JPG"
+          href="../img-galeria/9bf4faf6-bb4a-4d3d-aea5-0afea38edd9a.JPG"
           class="gallery-items"
         >
           <img
-            src="./src/img-galeria/9bf4faf6-bb4a-4d3d-aea5-0afea38edd9a.JPG"
+            src="../img-galeria/9bf4faf6-bb4a-4d3d-aea5-0afea38edd9a.JPG"
             alt="Flo"
           />
         </a>
         <a
-          href="./src/img-galeria/d2d163ed-537d-47d8-b8da-7ea1ef42c391.JPG"
+          href="../img-galeria/d2d163ed-537d-47d8-b8da-7ea1ef42c391.JPG"
           class="gallery-items"
         >
           <img
-            src="./src/img-galeria/d2d163ed-537d-47d8-b8da-7ea1ef42c391.JPG"
+            src="../img-galeria/d2d163ed-537d-47d8-b8da-7ea1ef42c391.JPG"
             alt="Guido"
           />
         </a>
         <a
-          href="./src/img-galeria/ec928fad-1d84-4a95-a3cb-a784672b8f04.JPG"
+          href="../img-galeria/ec928fad-1d84-4a95-a3cb-a784672b8f04.JPG"
           class="gallery-items"
         >
           <img
-            src="./src/img-galeria/ec928fad-1d84-4a95-a3cb-a784672b8f04.JPG"
+            src="../img-galeria/ec928fad-1d84-4a95-a3cb-a784672b8f04.JPG"
             alt="lightning-mcqueen"
           />
         </a>
         <a
-          href="./src/img-galeria/f3872a41-d4c7-43d4-92c1-bf91b6adf262.JPG"
+          href="../img-galeria/f3872a41-d4c7-43d4-92c1-bf91b6adf262.JPG"
           class="gallery-items"
         >
           <img
-            src="./src/img-galeria/f3872a41-d4c7-43d4-92c1-bf91b6adf262.JPG"
+            src="../img-galeria/f3872a41-d4c7-43d4-92c1-bf91b6adf262.JPG"
             alt="Lizzie"
           />
         </a>
-        <a href="./src/img-galeria/IMG_7156.PNG" class="gallery-items">
-          <img src="./src/img-galeria/IMG_7156.PNG" alt="Luigi" />
+        <a href="../img-galeria/IMG_7156.PNG" class="gallery-items">
+          <img src="../img-galeria/IMG_7156.PNG" alt="Luigi" />
         </a>
-        <a href="./src/img/IMG_7127.MOV" class="gallery-items video">
+        <a href="../img/IMG_7127.MOV" class="gallery-items video">
           <video controls>
-            <source src="./src/img/IMG_7127.MOV" type="video/mp4" />
+            <source src="../img/IMG_7127.MOV" type="video/mp4" />
             Seu navegador não suporta a tag de vídeo.
           </video>
         </a>
-        <a href="./src/img/IMG_7127.MOV" class="gallery-items video">
+        <a href="../img/IMG_7127.MOV" class="gallery-items video">
           <video controls>
-            <source src="./src/img/IMG_7127.MOV" type="video/mp4" />
+            <source src="../img/IMG_7127.MOV" type="video/mp4" />
             Seu navegador não suporta a tag de vídeo.
           </video>
         </a>
-        <a href="./src/img/IMG_7127.MOV" class="gallery-items video">
+        <a href="../img/IMG_7127.MOV" class="gallery-items video">
           <video controls>
-            <source src="./src/img/IMG_7127.MOV" type="video/mp4" />
+            <source src="../img/IMG_7127.MOV" type="video/mp4" />
             Seu navegador não suporta a tag de vídeo.
           </video>
         </a>
-        <a href="./src/img/IMG_7127.MOV" class="gallery-items video">
+        <a href="../img/IMG_7127.MOV" class="gallery-items video">
           <video controls>
-            <source src="./src/img/IMG_7127.MOV" type="video/mp4" />
+            <source src="../img/IMG_7127.MOV" type="video/mp4" />
             Seu navegador não suporta a tag de vídeo.
           </video>
         </a>
