atribuindo novas page

--- a/src/html/danos.html
+++ b/src/html/danos.html
@@ -149,7 +149,7 @@
               
               </form>
 
-      <script src="../javascripts/index.js"></script>
+      <script src="../javascripts/xtream.js"></script>
       <script src="../javascripts/acesso-cetificado.js"></script>
     
 </body>
