--- a/src/html/index.html
+++ b/src/html/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../css/grid.css">
     <link rel="stylesheet" href="../css/img.css">
     <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../css/mobile.css">
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
 
     <!-- Google tag (gtag.js) -->
@@ -196,7 +197,7 @@
               
     
       </footer>
-    <script src="../javascripts/index.js"></script>
+    <script src="../javascripts/xtream.js"></script>
     <script src="../javascripts/img.js"></script>
     <script src="../javascripts/acesso-cetificado.js"></script>
   </body>
