--- a/src/html/danos.html
+++ b/src/html/danos.html
@@ -13,14 +13,14 @@
 <body>
     <header>
         <nav>
-          <a class="logo" href="https://senacecologico.onrender.com/">Senac ecologico</a>  
+          <a class="logo" href="../../index.html">Senac ecologico</a>  
           <div class="mobile-menu">
             <div class="line1"></div>
             <div class="line2"></div>
             <div class="line3"></div>
           </div>
           <ul class="nav-list">
-            <li><a class="bt-nav" href="./index.html">Início</a></li>
+            <li><a class="bt-nav" href="../../index.html">Início</a></li>
             <li><a class="bt-nav" href="./sobre.html">Sobre</a></li>
             <li><a class="bt-nav" href="#">Projetos</a></li>
             <li><a class="bt-nav" href="./galeria.html">Galeria de fotos</a></li>
@@ -113,7 +113,7 @@
                   
                   <ul>
                   
-                    <li><a href="./index.html" title="Página Inícial">Página Inícial</a></li>
+                    <li><a href="../../index.html" title="Página Inícial">Página Inícial</a></li>
                     <li><a href="./sobre.html" title="Sobre a Empresa">Sobre</a></li>
                     <li><a href="#" title="Galeria de Fotos">Projetos</a></li>
                     <li><a href="./galeria.html" title="Fale Conosco">Galeria de fotos</a></li>
