--- a/src/html/galeria.html
+++ b/src/html/galeria.html
@@ -31,7 +31,7 @@
       />
       Seu navegador não suporta a reprodução de áudio.
     </audio>
-    <a href="./index.html" class="seta"
+    <a href="../../index.html" class="seta"
       ><img src="../img-galeria/back-arrow_icon-icons.com_72866.png" alt="seta"
     /></a>
     <header>
