--- a/src/html/sobre.html
+++ b/src/html/sobre.html
@@ -23,7 +23,7 @@
     </script>
   </head>
   <body>
-    <a href="./index.html" class="seta"
+    <a href="../../index.html" class="seta"
       ><img src="../img-galeria/back-arrow_icon-icons.com_72866.png" alt=""
     /></a>
     <p>Projeto Lab Juv - Turma Cinza 2023.33.82</p>
