--- a/src/html/danos.html
+++ b/src/html/danos.html
@@ -148,7 +148,7 @@
               </form>
 
       <script src="../javascripts/xtream.js"></script>
-      <script src="../javascripts/acesso-cetificado.js"></script>
+      <script src="../../acesso-cetificado.js"></script>
     
 </body>
 </html>
