--- a/src/html/sobre.html
+++ b/src/html/sobre.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-bt">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -129,6 +129,6 @@
               </form>
 
               <script src="../javascripts/xtream.js"></script>
-          <script src="../javascripts/acesso-cetificado.js"></script>
+          <script src="../../acesso-cetificado.js"></script>
   </body>
 </html>
