--- a/src/html/galeria.html
+++ b/src/html/galeria.html
@@ -259,7 +259,7 @@
               </form>
 
           <script src="../javascripts/xtream.js"></script>
-          <script src="../javascripts/acesso-cetificado.js"></script>
+          <script src="../../acesso-cetificado.js"></script>
 
 
 
