--- a/src/html/galeria.html
+++ b/src/html/galeria.html
@@ -48,6 +48,8 @@
 
     <main>
       <div class="gallery-container">
+      
+
         <a
           href="../img-galeria/d2d163ed-537d-47d8-b8da-7ea1ef42c391.JPG"
           class="gallery-items"
@@ -141,17 +143,16 @@
         </a>
 
 
+
         <a
-          href="../img-galeria/PHOTO-2023-09-30-09-35-29(5).jpg"
-          class="gallery-items"
-        >
-          <img
-            src="../img-galeria/PHOTO-2023-09-30-09-35-29(5).jpg"
-            alt="Lizzie"
-          />
-        </a>
-
-
+        href="../img-galeria/WhatsApp Image 2023-10-02 at 09.16.14.jpeg"
+        class="gallery-items"
+      >
+        <img
+          src="../img-galeria/WhatsApp Image 2023-10-02 at 09.16.14.jpeg"
+          alt="Lizzie"
+        />
+      </a>
 
         <a
           href="../img-galeria/PHOTO-2023-09-30-09-35-29(6).jpg"
@@ -162,6 +163,29 @@
             alt="Lizzie"
           />
         </a>
+
+
+        <a
+        href="../img-galeria/WhatsApp Image 2023-10-02 at 08.39.47.jpeg"
+        class="gallery-items"
+      >
+        <img
+          src="../img-galeria/WhatsApp Image 2023-10-02 at 08.39.47.jpeg"
+          alt="Lizzie"
+        />
+      </a>
+
+
+      <a
+      href="../img-galeria/WhatsApp Image 2023-10-02 at 09.16.14 (1).jpeg"
+      class="gallery-items"
+    >
+      <img
+        src="../img-galeria/WhatsApp Image 2023-10-02 at 09.16.14 (1).jpeg"
+        alt="Lizzie"
+      />
+    </a>
+
 
 
 
@@ -183,6 +207,28 @@
         >
           <img
             src="../img-galeria/PHOTO-2023-09-30-09-35-29(8).jpg"
+            alt="Lizzie"
+          />
+        </a>
+
+        <a
+        href="../img-galeria/PHOTO-2023-09-30-09-35-29(5).jpg"
+        class="gallery-items"
+      >
+        <img
+          src="../img-galeria/PHOTO-2023-09-30-09-35-29(5).jpg"
+          alt="Lizzie"
+        />
+      </a>
+
+
+
+        <a
+          href="../img-galeria/WhatsApp Image 2023-10-02 at 08.39.45.jpeg"
+          class="gallery-items"
+        >
+          <img
+            src="../img-galeria/WhatsApp Image 2023-10-02 at 08.39.45.jpeg"
             alt="Lizzie"
           />
         </a>
