--- a/src/html/soluçoes.html
+++ b/src/html/soluçoes.html
@@ -141,7 +141,7 @@
               </form>
 
       <script src="../javascripts/xtream.js"></script>
-          <script src="../../acesso-cetificado.js"></script>
+          <script src="../javascripts/acesso-cetificado.js"></script>
     
 </body>
 </html>
