--- a/src/html/sobre.html
+++ b/src/html/sobre.html
@@ -129,6 +129,6 @@
               </form>
 
               <script src="../javascripts/xtream.js"></script>
-          <script src="../../acesso-cetificado.js"></script>
+          <script src="../javascripts/acesso-cetificado.js"></script>
   </body>
 </html>
